# low_level_codes

./: README.md
atlast_interferometer/: atlast_correlator.service  cleanup.sh  data_move.sh  run_correlation.sh
atlast_interferometer/full_bw_correlator/: animation.py  beacon_search.py  plot_data.py
atlast_interferometer/full_bw_correlator/source/: main.cpp
atlast_interferometer/masked_correlator/source/: main.cpp  plot_data.py
atlast_interferometer/single_point_correlator/source/: CMakeLists.txt  animation.py  main.cpp  plot_data.py
cpp/SCPI_server/includes/: SCPI_server.h
cpp/SCPI_server/source/: CMakeLists.txt  SCPI_server.cpp  main.cpp
cpp/SCPI_stream_data/: README.md
cpp/SCPI_stream_data/includes/: .SCPI_server.h.kate-swp  SCPI_server.h
cpp/SCPI_stream_data/source/: CMakeLists.txt  SCPI_server.cpp  main.cpp
cpp/TcpUtils/includes/: TcpSocket.h
cpp/TcpUtils/source/: CMakeLists.txt  test.cpp
cpp/UdpUtils/source/: CMakeLists.txt  test.cpp
